Add links to studioamanga.com in footer

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
             </section>
         </section>
         <footer>
-            <img src="img/amgmini.png" alt="StdAMG" />
+            <a href="http://www.studioamanga.com"><img src="img/amgmini.png" alt="StdAMG" /></a>
             <p>
                 “1List” for iPhone, iPod touch, and iPad<br />
-                by&nbsp;Studio&nbsp;AMANgA - 2012
+                by&nbsp;<a href="http://www.studioamanga.com">Studio&nbsp;AMANgA</a> - 2012
             </p>
         </footer>
     </body>
