Add App Store link, add gitignore, remove soon page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-        <title>1List - Fast & Simple To-Do app for iPhone and iPad</title>
+        <title>1List - Fast &amp; Simple To-Do app for iPhone and iPad</title>
         <link rel="stylesheet" type="text/css" href="onelist.css"/>
         <link rel="shortcut icon" href="http://www.studioamanga.com/img/favicon.ico" />
         <link rel="apple-touch-icon-precomposed" href="../img/touch-icon-iphone4.png" />
@@ -46,8 +46,8 @@
                 <ul>
                     <li>
                         <img src="img/zap.png" alt="Fast" />
-                        <em>Auto-complete</em>
-                        <p>Less keyboard, more efficient. Just like Google, you know?</p>
+                        <em>Autocomplete</em>
+                        <p>Blazing fast and efficient. Just like Google, you know?</p>
                     </li>
                     <li>
                         <img src="img/cloud.png" alt="Sync" />
@@ -60,7 +60,7 @@
                         <p>Just tell me what to do.</p>
                     </li>
                 </ul>
-                <a href="soon.html">
+                <a href="https://itunes.apple.com/app/1list-fast-simple/id579440241?ls=1&am;mt=8">
                     <img src="img/download-appstore-225.png" alt="Download"/>
                 </a>
             </section>
