Fix stupid escaping typo

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <p>Just tell me what to do.</p>
                     </li>
                 </ul>
-                <a href="https://itunes.apple.com/app/1list-fast-simple/id579440241?ls=1&am;mt=8">
+                <a href="https://itunes.apple.com/app/1list-fast-simple/id579440241?ls=1&amp;mt=8">
                     <img src="img/download-appstore-225.png" alt="Download"/>
                 </a>
             </section>
