Add app smart banner

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../img/touch-icon-ipad.png" />
         <meta name="description" content="Studio AMANgA is an independant website/app producer." />
         <meta name="viewport" content="width=device-width" />
+        <meta name="apple-itunes-app" content="app-id=579440241">
         <script type="text/javascript">
 /* <![CDATA[ */
           var _gaq = _gaq || [];
