--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <a href="http://www.studioamanga.com"><img src="img/amgmini.png" alt="StdAMG" /></a>
             <p>
                 “1List” for iPhone, iPod touch, and iPad<br />
-                by&nbsp;<a href="http://www.studioamanga.com">Studio&nbsp;AMANgA</a> - 2012
+                by&nbsp;<a href="http://www.studioamanga.com">Studio&nbsp;AMANgA</a> - 2012/2013
             </p>
         </footer>
     </body>
