--- a/index.html
+++ b/index.html
@@ -38,6 +38,42 @@
         </script>
     </head>
     <body>
+        <header class="general">
+          <nav>
+            <ul>
+              <li>
+                <a href="http://www.studioamanga.com/">
+                  <img alt="StdAMG" src="img/icon-amg.png">
+                  <span>Studio AMANgA</span>
+                </a>
+              </li>
+              <li>
+                <a href="http://www.studioamanga.com/news.html">
+                  <img alt="Feed" src="img/icon-feed.png">
+                  <span>News</span>
+                </a>
+              </li>
+              <li>
+                <a href="http://www.studioamanga.com/contacts/">
+                  <img alt="Contacts" src="img/icon-contacts.png">
+                  <span>Contact[s]</span>
+                </a>
+              </li>
+              <li>
+                <a href="http://www.studioamanga.com/onelist/">
+                  <img alt="1List" src="img/icon-onelist.png">
+                  <span>1List</span>
+                </a>
+              </li>
+              <li>
+                <a href="http://www.studioamanga.com/wizbox/">
+                  <img alt="WizBox" src="img/icon-wizbox.png">
+                  <span>WizBox</span>
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </header>
         <header class="top">
             <img src="img/icon-72.png" class="icon" alt="Icon" />
             <h1>1List</h1>
