Add Comic Book Day

--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
                 </a>
               </li>
               <li>
+                <a href="http://www.studioamanga.com/comicbookday/">
+                  <img alt="Contacts" src="img/icon-comicbookday.png">
+                  <span>Comic Book Day</span>
+                </a>
+              </li>
+              <li>
                 <a href="http://www.studioamanga.com/contacts/">
                   <img alt="Contacts" src="img/icon-contacts.png">
                   <span>Contact[s]</span>
