--- a/index.html
+++ b/index.html
@@ -38,36 +38,36 @@
         </script>
     </head>
     <body>
-        <header class="general">
+        <header class='general'>
           <nav>
             <ul>
               <li>
-                <a href="http://www.studioamanga.com/">
-                  <img alt="StdAMG" src="img/icon-amg.png">
+                <a href='http://www.studioamanga.com/'>
+                  <img alt='StdAMG' src='img/icon-amg.png'>
                   <span>Studio AMANgA</span>
                 </a>
               </li>
               <li>
-                <a href="http://www.studioamanga.com/comicbookday/">
-                  <img alt="Contacts" src="img/icon-comicbookday.png">
+                <a href='http://www.studioamanga.com/comicbookday/'>
+                  <img alt='Comic Book Day' src='img/icon-comicbookday.png'>
                   <span>Comic Book Day</span>
                 </a>
               </li>
               <li>
-                <a href="http://www.studioamanga.com/contacts/">
-                  <img alt="Contacts" src="img/icon-contacts.png">
+                <a href='http://www.studioamanga.com/contacts/'>
+                  <img alt='Contacts' src='img/icon-contacts.png'>
                   <span>Contact[s]</span>
                 </a>
               </li>
               <li>
-                <a href="http://www.studioamanga.com/onelist/">
-                  <img alt="1List" src="img/icon-onelist.png">
-                  <span>1List</span>
+                <a href='http://www.studioamanga.com/gameskeeper/'>
+                  <img alt='Games Keeper' src='img/icon-gameskeeper.png'>
+                  <span>Games Keeper</span>
                 </a>
               </li>
               <li>
-                <a href="http://www.studioamanga.com/wizbox/">
-                  <img alt="WizBox" src="img/icon-wizbox.png">
+                <a href='http://www.studioamanga.com/wizbox/'>
+                  <img alt='WizBox' src='img/icon-wizbox.png'>
                   <span>WizBox</span>
                 </a>
               </li>
