Update texts, update icons

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <img src="img/icon-72.png" class="icon" alt="Icon" />
                     <h1>1List</h1>
                 </header>
-                <h2>Fast. Simple.</h2>
+                <h2>Fast and Simple.</h2>
                 <p>
                     Don’t waste time.<br />
                     If you need to remember things, it has to be fast and simple.<br/>
@@ -96,19 +96,19 @@
                 </p>
                 <ul>
                     <li>
-                        <img src="img/zap.png" alt="Fast" />
+                        <img src="img/icon-lightning-bolt.png" alt="Fast" />
                         <em>Autocomplete</em>
-                        <p>Blazing fast and efficient. Just like Google, you know?</p>
+                        <p>Blazingly efficient. 1List helps you create new reminders based on your previous entries. The more you use it, the faster it gets.</p>
                     </li>
                     <li>
-                        <img src="img/cloud.png" alt="Sync" />
-                        <em>iCloud Sync</em>
-                        <p>Use as many devices as you want, no problem.</p>
+                        <img src="img/icon-cloud.png" alt="Sync" />
+                        <em>iCloud Reminders</em>
+                        <p>Always in sync. 1List directly integrates with iCloud Reminders. You don’t need to create a new account, your reminders are available on all your devices.</p>
                     </li>
                     <li>
-                        <img src="img/micro.png" alt="Micro"/>
+                        <img src="img/icon-chat.png" alt="Micro"/>
                         <em>Works with Siri</em>
-                        <p>Just tell me what to do.</p>
+                        <p>Hands free. You can simply use Siri to create new reminders.</p>
                     </li>
                 </ul>
                 <a href="https://itunes.apple.com/app/1list-fast-simple/id579440241?ls=1&amp;mt=8">
@@ -120,7 +120,7 @@
             <a href="http://www.studioamanga.com"><img src="img/amgmini.png" alt="StdAMG" /></a>
             <p>
                 “1List” for iPhone, iPod touch, and iPad<br />
-                by&nbsp;<a href="http://www.studioamanga.com">Studio&nbsp;AMANgA</a> / 2012-2014
+                <a href="http://www.studioamanga.com">Studio&nbsp;AMANgA</a> 2012-2014
             </p>
         </footer>
     </body>
