--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
+        <meta charset="utf-8" />
         <title>1List - Fast &amp; Simple To-Do app for iPhone and iPad</title>
-        <link rel="stylesheet" type="text/css" href="onelist.css"/>
+        <link rel="stylesheet" type="text/css" href="onelist.css?val" />
         <link rel="shortcut icon" href="http://www.studioamanga.com/img/favicon.ico" />
         <link rel="apple-touch-icon-precomposed" href="../img/touch-icon-iphone4.png" />
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../img/touch-icon-ipad.png" />
-        <meta name="description" content="Studio AMANgA is an independant website/app producer." />
+        <meta name="description" content="1List, fast and simple reminders." />
         <meta name="viewport" content="width=device-width" />
         <meta name="apple-itunes-app" content="app-id=579440241">
         <script type="text/javascript">
@@ -30,31 +30,31 @@
             <ul>
               <li>
                 <a href='http://www.studioamanga.com/'>
-                  <img alt='StdAMG' src='img/icon-amg.png'>
+                  <img alt='StdAMG' src='img/icon-amg.png?val'>
                   <span>Studio AMANgA</span>
                 </a>
               </li>
               <li>
                 <a href='http://www.studioamanga.com/comicbookday/'>
-                  <img alt='Comic Book Day' src='img/icon-comicbookday.png'>
+                  <img alt='Comic Book Day' src='img/icon-comicbookday.png?val'>
                   <span>Comic Book Day</span>
                 </a>
               </li>
               <li>
                 <a href='http://www.studioamanga.com/contacts/'>
-                  <img alt='Contacts' src='img/icon-contacts.png'>
+                  <img alt='Contacts' src='img/icon-contacts.png?val'>
                   <span>Contact[s]</span>
                 </a>
               </li>
               <li>
                 <a href='http://www.studioamanga.com/gameskeeper/'>
-                  <img alt='Games Keeper' src='img/icon-gameskeeper.png'>
+                  <img alt='Games Keeper' src='img/icon-gameskeeper.png?val'>
                   <span>Games Keeper</span>
                 </a>
               </li>
               <li>
                 <a href='http://www.studioamanga.com/wizbox/'>
-                  <img alt='WizBox' src='img/icon-wizbox.png'>
+                  <img alt='WizBox' src='img/icon-wizbox.png?val'>
                   <span>WizBox</span>
                 </a>
               </li>
@@ -62,7 +62,7 @@
           </nav>
         </header>
         <header class="top">
-            <img src="img/icon-72.png" class="icon" alt="Icon" />
+            <img src="img/icon-72-2x.png" class="icon" alt="Icon" />
             <h1>1List</h1>
         </header>
         <section id="main">
@@ -72,7 +72,7 @@
             </section>
             <section id="features">
                 <header class="insert">
-                    <img src="img/icon-72.png" class="icon" alt="Icon" />
+                    <img src="img/icon-72-2x.png" class="icon" alt="Icon" />
                     <h1>1List</h1>
                 </header>
                 <h2>Fast and Simple.</h2>
@@ -98,13 +98,13 @@
                         <p>Hands free. You can simply use Siri to create new reminders.</p>
                     </li>
                 </ul>
-                <a href="https://itunes.apple.com/app/1list-fast-simple/id579440241?ls=1&amp;mt=8">
-                    <img src="img/download-appstore-225.png" alt="Download"/>
+                <a href="https://itunes.apple.com/app/1list-fast-simple/id579440241?ls=1&amp;mt=8" class="download">
+                    <img src="img/download-appstore.svg" alt="Download"/>
                 </a>
             </section>
         </section>
         <footer>
-            <a href="http://www.studioamanga.com"><img src="img/amgmini.png" alt="StdAMG" /></a>
+            <a href="http://www.studioamanga.com"><img src="img/amgmini-black.png" alt="StdAMG" /></a>
             <p>
                 “1List” for iPhone, iPod touch, and iPad<br />
                 <a href="http://www.studioamanga.com">Studio&nbsp;AMANgA</a> 2012-2014
