Add Retina navigation icons

--- a/index.html
+++ b/index.html
@@ -36,25 +36,25 @@
               </li>
               <li>
                 <a href='http://www.studioamanga.com/comicbookday/'>
-                  <img alt='Comic Book Day' src='img/icon-comicbookday.png?val'>
+                  <img alt='Comic Book Day' src='img/icon-comicbookday.png?va'>
                   <span>Comic Book Day</span>
                 </a>
               </li>
               <li>
                 <a href='http://www.studioamanga.com/contacts/'>
-                  <img alt='Contacts' src='img/icon-contacts.png?val'>
+                  <img alt='Contacts' src='img/icon-contacts.png?va'>
                   <span>Contact[s]</span>
                 </a>
               </li>
               <li>
                 <a href='http://www.studioamanga.com/gameskeeper/'>
-                  <img alt='Games Keeper' src='img/icon-gameskeeper.png?val'>
+                  <img alt='Games Keeper' src='img/icon-gameskeeper.png?va'>
                   <span>Games Keeper</span>
                 </a>
               </li>
               <li>
                 <a href='http://www.studioamanga.com/wizbox/'>
-                  <img alt='WizBox' src='img/icon-wizbox.png?val'>
+                  <img alt='WizBox' src='img/icon-wizbox.png?va'>
                   <span>WizBox</span>
                 </a>
               </li>
