--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
             <a href="http://www.studioamanga.com"><img src="img/amgmini-black.png" alt="StdAMG" /></a>
             <p>
                 “1List” for iPhone, iPod touch, and iPad<br />
+                <a href="releasenotes">Release Notes</a><br />
                 <a href="http://www.studioamanga.com">Studio&nbsp;AMANgA</a> 2012-2015
             </p>
         </footer>
