--- a/index.html
+++ b/index.html
@@ -85,9 +85,7 @@
         </p>
       </div>
       <div class='feature'>
-        <h3>
-          <span style="background-color: #5693DB; color: white; font-size: 10pt; border-radius: 4px; display: inline-block; height: 20px; width: 42px; line-height: 20px; text-align: center; position: relative; top: -2px;">NEW</span>&nbsp;Available on Apple Watch
-        </h3>
+        <h3>Available on Apple Watch</h3>
         <img alt='Apple Watch' src='img/icon-watch.png'>
         <p>
           The missing app.
@@ -110,7 +108,7 @@
         <br>
         <a href='releasenotes'>Release Notes</a>
         <br>
-        Made by Studio AMANgA 2012-2015
+        Made by Studio AMANgA 2012-2017
       </p>
     </footer>
     <script>
