--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <meta charset='utf-8'>
 <title>1List for iPhone, iPad, and Apple Watch</title>
 <link href='style.css?val' rel='stylesheet' type='text/css'>
-<link href='http://www.studioamanga.com/img/favicon.ico' rel='shortcut icon'>
+<link href='https://www.studioamanga.com/onelist/' rel='canonical'>
+<link href='https://www.studioamanga.com/img/favicon.ico' rel='shortcut icon'>
 <link href='../img/touch-icon-iphone4.png' rel='apple-touch-icon-precomposed'>
 <link href='../img/touch-icon-ipad.png' rel='apple-touch-icon-precomposed' sizes='72x72'>
 <meta content='1List, fast and simple reminders.' name='description'>
@@ -15,27 +16,9 @@
 <nav class='general'>
 <ul>
 <li>
-<a href='http://www.studioamanga.com/'>
+<a href='https://www.studioamanga.com/'>
 <img alt='StdAMG' src='img/icon-amg.png'>
 <span>Studio AMANgA</span>
-</a>
-</li>
-<li>
-<a href='http://www.studioamanga.com/contacts/'>
-<img alt='Contacts' src='img/icon-contacts.png'>
-<span>Contact[s]</span>
-</a>
-</li>
-<li>
-<a href='http://www.studioamanga.com/comicbookday/'>
-<img alt='Comic Book Day' src='img/icon-comicbookday.png'>
-<span>Comic Book Day</span>
-</a>
-</li>
-<li>
-<a href='http://www.studioamanga.com/gameskeeper/'>
-<img alt='Games Keeper' src='img/icon-gameskeeper.png'>
-<span>Games Keeper</span>
 </a>
 </li>
 </ul>
@@ -100,7 +83,7 @@ The missing app.
 </p>
 </section>
 <footer>
-<a href='http://www.studioamanga.com'>
+<a href='https://www.studioamanga.com'>
 <img alt='StdAMG' src='img/amgmini-black.png'>
 </a>
 <p>
@@ -108,7 +91,7 @@ The missing app.
 <br>
 <a href='releasenotes'>Release Notes</a>
 <br>
-Made by Studio AMANgA 2012-2018
+Made by Studio AMANgA 2012-2019
 </p>
 </footer>
 <script>
