Include privacy policy link, update style

--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@ The missing app.
 </a>
 <p>
 “1List” for iPhone, iPad, iPod touch, and Apple Watch
+<br><a href='releasenotes'>Release Notes</a>,
+<a href='privacy-policy'>Privacy Policy</a>
 <br>
-<a href='releasenotes'>Release Notes</a>
-<br>
-Made by Studio AMANgA 2012-2019
+Made by Studio AMANgA 2012-2020
 </p>
 </footer>
 <script>
