--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,16 +1,23 @@
-<!DOCTYPE html>
-<html lang='en'>
-	<head>
-		<meta charset='utf-8'>
-		<title>1List Privacy Policy</title>
-	</head>
-	<body>
-		<h1>1List Privacy Policy</h1>
-		<p>Data for the app exclusively comes from the Apple Reminders API, and is never stored within the app itself.</p>
-		<ul>
-			<li>All the lists and reminders data comes from the Apple Reminders API provided by the system, and is saved directly to the Apple Reminders API.</li>
-			<li>No third-party software has access to your data.</li>
-			<li>Your data remains in the Apple Reminders API container when you delete the app from your device.</li>
-		</ul>
-	</body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>1List - Privacy Policy</title>
+    <meta name="viewport" content="width=device-width">
+    <link href="https://www.studioamanga.com/nanonotes/privacy-policy" rel="canonical">
+    <style>
+      body {font-family: -apple-system; padding-bottom: 80px; padding-left: 10px; padding-right: 10px;}
+      body > * {max-width:600px; margin-left: auto; margin-right: auto;}
+      h1 {margin-top: 80px; margin-bottom: 4px;}
+    </style>
+  </head>
+  <body>
+    <h1>1List Privacy Policy</h1>
+    <div><a href="https://www.studioamanga.com/onelist">https://www.studioamanga.com/onelist</a></div>
+    <p>Data for the app exclusively comes from the Apple Reminders API, and is never stored within the app itself.</p>
+    <ul>
+      <li>All the lists and reminders data comes from the Apple Reminders API provided by the system, and is saved directly to the Apple Reminders API.</li>
+      <li>No third-party software has access to your data.</li>
+      <li>Your data remains in the Apple Reminders API container when you delete the app from your device.</li>
+    </ul>
+  </body>
 </html>
