Update release notes, add macOS version

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 <head>
 <meta charset='utf-8'>
-<title>1List for iPhone, iPad, and Apple Watch</title>
+<title>1List for iPhone, iPad, Mac, and Apple Watch</title>
 <link href='style.css?val' rel='stylesheet' type='text/css'>
 <link href='https://www.studioamanga.com/onelist/' rel='canonical'>
 <link href='https://www.studioamanga.com/img/favicon.ico' rel='shortcut icon'>
@@ -85,7 +85,7 @@ The missing app.
 <img alt='StdAMG' src='img/amgmini-black.png'>
 </a>
 <p>
-“1List” for iPhone, iPad, iPod touch, and Apple Watch
+“1List” for iPhone, iPad, Mac, and Apple Watch
 <br><a href='releasenotes'>Release Notes</a>,
 <a href='privacy-policy'>Privacy Policy</a>
 <br>
